chore: added target to footer speedlify link

--- a/src/_includes/partials/global/site-foot.njk
+++ b/src/_includes/partials/global/site-foot.njk
@@ -34,7 +34,7 @@
     </div>
     {% if site.showThemeCredit %}
       <p class="[ site-foot__credit ] [ pad-top-900 ]">
-	  	Built with <a href="https://www.11ty.io/" target="_blank" rel="noreferrer">Eleventy</a> &bull; Hosted on <a href="https://www.netlify.com/" target="_blank" rel="noreferrer">Netlify</a> &bull; <a href="/styleguide/">Style Guide</a> &bull; <a href="https://james-bateson-speedlify.netlify.app/jamesbateson.co.uk/" rel="noreferrer">Speedlify</a>.
+	  	Built with <a href="https://www.11ty.io/" target="_blank" rel="noreferrer">Eleventy</a> &bull; Hosted on <a href="https://www.netlify.com/" target="_blank" rel="noreferrer">Netlify</a> &bull; <a href="/styleguide/">Style Guide</a> &bull; <a href="https://james-bateson-speedlify.netlify.app/jamesbateson.co.uk/" target="_blank" rel="noreferrer">Speedlify</a>.
       </p>
     {% endif %}
   </div>
