--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -8,7 +8,7 @@
   {% if date %}
     <time datetime="{{ date | w3DateFilter }}" class="dt-published">{{ date | dateFilter }}</time>
   {% endif %}
-  <span>— {{ helpers.getReadingTime(content) }} minute read</span>
+  <span>— around a {{ helpers.getReadingTime(content) }} minute read</span>
 </p>
 {% endset %}
 
