--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -70,37 +70,38 @@ hr {
 // Links
 
 a:not([class]) {
-    color: var(--color-link-text);
+    color: var(--color-text);
     text-decoration: underline;
     text-decoration-color: var(--color-link-text);
 
     &:hover,
     &:focus {
-        color: var(--color-text);
+        color: var(--color-link-text);
     }
 }
 
 .link-hover {
-    display: inline-block;
-    text-decoration: none;
+	background-image: linear-gradient(var(--color-link-text), var(--color-link-text));
+	background-position: 0 100%;
+	background-repeat: no-repeat;
+	background-size: 0 2px;
+	text-decoration: none;
+	transition: background-size .3s cubic-bezier(.365, .005, .355, 1);
 
-    &:after {
-        background-color: var(--color-theme-primary);
-        content: '';
-        display: block;
-        height: 2px;
-        margin-top: 2px;
-        transition: width .4s ease;
-        width: 0;
-    }
+    // &:after {
+    //     background-color: var(--color-theme-primary);
+    //     content: '';
+    //     display: block;
+    //     height: 2px;
+    //     margin-top: 2px;
+    //     transition: width .4s ease;
+    //     width: 0;
+    // }
 
     &:hover,
     &:focus {
+		background-size: 100% 2px;
         text-decoration: none;
-
-        &:after {
-            width: 100%;
-        }
     }
 }
 
