fix: nav item active state

--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -19,9 +19,7 @@
 
         &.active {
             a {
-                &:after {
-                    width: 50%;
-                }
+                background-size: 50% 2px;
             }
         }
 
