style: couple of post footer tag nav tweaks

--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -10,6 +10,10 @@
 			&::-webkit-scrollbar {
 				display: none;
 			}
+
+			.nav__item {
+				flex-shrink: 0;
+			}
 		}
 
         > * + * {
@@ -20,7 +24,6 @@
 	// Outputs: .nav__item
     &__item {
         padding: 0;
-        flex-shrink: 0;
 
         &.active {
             a {
