style: post note spacing following a code block

--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -149,7 +149,8 @@
         }
 
         p + .post-note,
-        ul + .post-note {
+		ul + .post-note,
+		pre[class*="language"] + .post-note {
             margin-top: var(--flow-space);
         }
 
