--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -1,78 +1,68 @@
 @font-face {
-    font-family: 'Skolar Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src:
-        url('/fonts/skolar-sans/skolar-sans-regular.woff2') format('woff2'),
-        url('/fonts/skolar-sans/skolar-sans-regular.woff') format('woff');
+	font-display: swap;
+	font-family: 'Skolar Sans';
+	font-style: normal;
+	font-weight: 400;
+	src: url('/fonts/skolar-sans/skolar-sans-regular.woff2') format('woff2'), url('/fonts/skolar-sans/skolar-sans-regular.woff') format('woff');
 }
 
 @font-face {
-    font-family: 'Skolar Sans';
-    font-style: normal;
-    font-weight: 600;
-    font-display: swap;
-    src:
-        url('/fonts/skolar-sans/skolar-sans-semi.woff2') format('woff2'),
-        url('/fonts/skolar-sans/skolar-sans-semi.woff') format('woff');
+	font-display: swap;
+	font-family: 'Skolar Sans';
+	font-style: normal;
+	font-weight: 600;
+	src: url('/fonts/skolar-sans/skolar-sans-semi.woff2') format('woff2'), url('/fonts/skolar-sans/skolar-sans-semi.woff') format('woff');
 }
 
 @font-face {
-    font-family: 'Skolar Sans';
-    font-style: normal;
-    font-weight: 700;
-    font-display: swap;
-    src:
-        url('/fonts/skolar-sans/skolar-sans-bold.woff2') format('woff2'),
-        url('/fonts/skolar-sans/skolar-sans-bold.woff') format('woff');
+	font-display: swap;
+	font-family: 'Skolar Sans';
+	font-style: normal;
+	font-weight: 700;
+	src: url('/fonts/skolar-sans/skolar-sans-bold.woff2') format('woff2'), url('/fonts/skolar-sans/skolar-sans-bold.woff') format('woff');
 }
 
 @font-face {
-    font-family: Sutro;
-    font-style: normal;
-    font-weight: 700;
-    font-display: swap;
-    src:
-        url('/fonts/sutro/sutro-bold.woff2') format('woff2'),
-        url('/fonts/sutro/sutro-bold.woff') format('woff');
+	font-display: swap;
+	font-family: Sutro;
+	font-style: normal;
+	font-weight: 700;
+	src: url('/fonts/sutro/sutro-bold.woff2') format('woff2'), url('/fonts/sutro/sutro-bold.woff') format('woff');
 }
 
 @font-face {
-    font-family: Sutro;
-    font-style: normal;
-    font-weight: 500;
-    font-display: swap;
-    src:
-        url('/fonts/sutro/sutro-med.woff2') format('woff2'),
-        url('/fonts/sutro/sutro-med.woff') format('woff');
+	font-display: swap;
+	font-family: Sutro;
+	font-style: normal;
+	font-weight: 500;
+	src: url('/fonts/sutro/sutro-med.woff2') format('woff2'), url('/fonts/sutro/sutro-med.woff') format('woff');
 }
 
 body {
-    @include apply-utility('font', 'base');
-    // Strip the unit off the size ratio to generate a line height
-    $line-height: get-size(600);
-    font-weight: 400;
-    line-height: $line-height / ($line-height * 0 + 1);
+	@include apply-utility('font', 'base');
+	// Strip the unit off the size ratio to generate a line height
+	$line-height: get-size(600);
+	font-weight: 400;
+	line-height: $line-height / ($line-height * 0 + 1);
 }
 
 h1,
 h2,
 h3 {
-    @include apply-utility('font', 'heading');
-    font-weight: 700;
+	@include apply-utility('font', 'heading');
+	font-weight: 700;
 }
 
 h1 {
-    font-size: get-size(700);
+	font-size: get-size(700);
 }
 
 h2 {
-    font-size: get-size(600);
+	font-size: get-size(600);
 }
 
 h3 {
-    font-size: get-size(500);
+	font-size: get-size(500);
 }
 
 .font-serif {
@@ -84,15 +74,15 @@ h3 {
 }
 
 @include media-query('md') {
-    h1 {
-        font-size: get-size(900);
-    }
+	h1 {
+		font-size: get-size(900);
+	}
 
-    h2 {
-        font-size: get-size(800);
-    }
+	h2 {
+		font-size: get-size(800);
+	}
 
-    h3 {
-        font-size: get-size(700);
-    }
+	h3 {
+		font-size: get-size(700);
+	}
 }
