--- a/src/scss/components/_heading-permalink.scss
+++ b/src/scss/components/_heading-permalink.scss
@@ -1,11 +1,10 @@
 .heading-permalink {
-    color: var(--color-theme-primary-glare);
-    font-size: 0.8em;
-    margin-left: 0.3em;
-    margin-top: 0.2em;
-
-    @include media-query('md') {
-        font-size: 0.6em;
-        margin-top: 0.4em;
-    }
+	color: var(--color-theme-primary-glare);
+	font-size: .8em;
+	margin-left: .3em;
+	margin-top: .2em;
+	@include media-query('md') {
+		font-size: .6em;
+		margin-top: .4em;
+	}
 }
