--- a/src/scss/components/_light-dark-toggle.scss
+++ b/src/scss/components/_light-dark-toggle.scss
@@ -30,10 +30,10 @@
 	}
 
 	&:before {
-		background: linear-gradient(229.84deg, rgba(255, 255, 255, 0) 14.29%, rgba(48, 48, 48, 0.15) 81.82%), var(--color-light);
+		background: linear-gradient(229.84deg, rgba(255, 255, 255, 0) 14.29%, rgba(48, 48, 48, .15) 81.82%), var(--color-light);
 		border: 0;
 		border-radius: 50%;
-		box-shadow: 0px 0px 4px var(--color-accent);
+		box-shadow: 0 0 4px var(--color-accent);
 		box-sizing: border-box;
 		content: '';
 		height: 18px;
@@ -58,7 +58,7 @@
 
 		// TODO: I think background-image might be a nicer way of doing this
 		.toggle__icon--light {
-			left: 0px;
+			left: 0;
 			opacity: 0;
 			visibility: hidden;
 		}
